Update API
#4
