# access_node/models/measurement_point.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from access_node.models.base_model_ import Model
+from access_node import util
+
+
+class MeasurementPoint(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: int=None, cell_id: int=None, position: float=None):  # noqa: E501
+        """MeasurementPoint - a model defined in Swagger
+
+        :param id: The id of this MeasurementPoint.  # noqa: E501
+        :type id: int
+        :param cell_id: The cell_id of this MeasurementPoint.  # noqa: E501
+        :type cell_id: int
+        :param position: The position of this MeasurementPoint.  # noqa: E501
+        :type position: float
+        """
+        self.swagger_types = {
+            'id': int,
+            'cell_id': int,
+            'position': float
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'cell_id': 'cell_id',
+            'position': 'position'
+        }
+
+        self._id = id
+        self._cell_id = cell_id
+        self._position = position
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MeasurementPoint':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The MeasurementPoint of this MeasurementPoint.  # noqa: E501
+        :rtype: MeasurementPoint
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this MeasurementPoint.
+
+
+        :return: The id of this MeasurementPoint.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this MeasurementPoint.
+
+
+        :param id: The id of this MeasurementPoint.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def cell_id(self) -> int:
+        """Gets the cell_id of this MeasurementPoint.
+
+
+        :return: The cell_id of this MeasurementPoint.
+        :rtype: int
+        """
+        return self._cell_id
+
+    @cell_id.setter
+    def cell_id(self, cell_id: int):
+        """Sets the cell_id of this MeasurementPoint.
+
+
+        :param cell_id: The cell_id of this MeasurementPoint.
+        :type cell_id: int
+        """
+
+        self._cell_id = cell_id
+
+    @property
+    def position(self) -> float:
+        """Gets the position of this MeasurementPoint.
+
+
+        :return: The position of this MeasurementPoint.
+        :rtype: float
+        """
+        return self._position
+
+    @position.setter
+    def position(self, position: float):
+        """Sets the position of this MeasurementPoint.
+
+
+        :param position: The position of this MeasurementPoint.
+        :type position: float
+        """
+
+        self._position = position
